@@ -6,6 +6,7 @@ Changelog.Parser=Config::IniFiles V 2.83
 [V 1.01]
 Date=2014-12-29T08:41:00
 Comments= <<EOT
+- Stop including the string 'Error: ' twice in error messages.
 - Stop the option print_warnings from printing the tree. Leave that to the caller.
 - Change docs to match.
 - Change scripts/*.pl and t/*.t to match.
